# python-qa-rag

./: .env.example  Dockerfile  README.md  config.py  presentation.md  presentation.pptx  pyproject.toml  requirements.txt
app/: api.py  ingestion.py
app/static/: index.html
evaluation/: evaluate.py  evaluation_raw.md  evaluation_results.md
notebooks/: Data Cleaning.ipynb
tests/: conftest.py  test_api.py
